add thumbnails for each character heroe

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,3 +4,20 @@
 $black: #2d2727
 $redMarvel: #f0141e
 $grayBg: #f4f4f4
+$whiteBg: #ffffff
+$shadowGray: #888888
+
+.gray-bg
+    background-color: $grayBg
+
+.white-bg
+    background-color: $whiteBg
+
+.padding-row
+    padding: 10px
+
+.margin-10
+    margin: 10px
+
+.padding-row 
+    padding: 20px
