--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -36,11 +36,12 @@
 
 <!-- ROW CHARACTERS -->
 <div class="row flex-items-xs-middle padding-row">
-  <div class="col-xs-10">
-    <!-- CHARACTERS COLUMN -->
-    <div class="col-xs-12 col-sm-6" *ngFor="let character of characters">
-      {{character}}
-    </div>
+  <div *ngIf="characters" class="col-xs-10" >
+    <!-- CHARACTERS-DETAIL COLUMN -->
+    <app-character-details
+    *ngFor="let character of characters.data.results"
+    [character]="character"
+    class="col-xs-12 col-sm-6"></app-character-details>
   </div>
   <!-- FAVORITES COLUMN -->
   <div class="col-xs-2">
