validate empty response for description character

--- a/src/app/character-thumbnail/character-thumbnail.component.sass
+++ b/src/app/character-thumbnail/character-thumbnail.component.sass
@@ -1,5 +1,11 @@
 @import '../../styles.sass'
+
 .thumbnail-img
-    max-width: 50%
+    max-width: 100%
     border-radius: 50%
     box-shadow: 5px 5px 5px $shadowGray
+    position: absolute
+    height: 180px
+    width: 180px
+    right: 12px
+    top: -17px
