--- a/src/app/character-details/character-details.component.html
+++ b/src/app/character-details/character-details.component.html
@@ -1,11 +1,26 @@
-<div  class="row padding-row">
-  <div class="container white-bg">
+<div  class="container padding-row no-pp-l">
+  <div class="row white-bg relative height-row">
     
-    <app-character-thumbnail
-    *ngIf="character.thumbnail"
-    [image]="character.thumbnail"
-    alt="Thumbail of {{character.name}}"></app-character-thumbnail>
-    <h3>{{character.name || character.fullName || character.title}}</h3>
-    <button type="button" class="btn btn-danger">Danger</button>
+    
+    <div class="col-xs-4">
+      <app-character-thumbnail
+      *ngIf="character.thumbnail"
+      [image]="character.thumbnail"
+      alt="Thumbail of {{character.name}}"></app-character-thumbnail>
+    </div>
+    <div class="col-xs-8">
+        <h4>{{character.name || character.fullName || character.title}}</h4>
+        <div [ngSwitch]="character.description">
+          <div *ngSwitchCase="''">
+            <p class="description">Sorry but this character dont have a description. It's Marvel fault :/ </p>
+            </div>
+          <div *ngSwitchDefault>
+            <p class="description">{{character.description}}</p>
+          </div>
+        </div>
+        <button type="button" class="btn btn-danger">View More</button>
+    </div>
+    
+    
   </div>
 </div>
