--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,6 +6,7 @@ $redMarvel: #f0141e
 $grayBg: #f4f4f4
 $whiteBg: #ffffff
 $shadowGray: #888888
+$grayText: #8c8483
 
 .gray-bg
     background-color: $grayBg
@@ -13,11 +14,21 @@ $shadowGray: #888888
 .white-bg
     background-color: $whiteBg
 
-.padding-row
-    padding: 10px
-
 .margin-10
     margin: 10px
 
+
 .padding-row 
     padding: 20px
+
+.no-pp-l
+    padding-left: 0 !important
+
+.absolute
+    position: absolute
+
+.relative
+    position: relative
+
+
+
