--- a/src/app/characters/characters.component.sass
+++ b/src/app/characters/characters.component.sass
@@ -1,1 +1,17 @@
 @import '../../styles.sass'
+
+.nav-marvel
+    background-color: $black
+
+.logo-marvel
+    width: 50%
+    height: 100%
+
+.full-width
+    width: 100%
+
+.center-nav
+    padding: 8px
+
+.padding-body
+    padding: 25px
