--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,3 +1,15 @@
+<!--HEADER-->
+<nav class="navbar navbar-full navbar-light bg-faded nav-marvel">
+  <a class="navbar-brand col-xs-2" href="../">
+    <img src="/assets/logo.png"  alt="logo-marvel" class="logo-marvel">
+  </a>
+  <form class="form-inline col-xs-6 center-nav padding">
+    <div class="input-group full-width">
+      <input type="text" class="form-control" placeholder="Search character..." aria-describedby="basic-addon1">
+    </div>
+  </form>
+</nav>
+
 <!-- ROW SORTS -->
 <div class="row flex-items-xs-top padding-row">
   <div class="col-xs-6">
@@ -41,17 +53,23 @@
     <app-character-details
     *ngFor="let character of characters.data.results"
     [character]="character"
-    class="col-xs-12 col-sm-6"></app-character-details>
+    class="col-xs-12 col-sm-6">
+    </app-character-details>
   </div>
   <!-- FAVORITES COLUMN -->
   <div class="col-xs-2">
     <!-- TODO: ADD FAVORITES COMPONENT -->
     <h1>FAVORITES</h1>
   </div>
-</div>
 
-<div class="row flex-items-xs-bottom padding-row">
-  TEST3
+  <div class="col-xs-10 padding-row">
+    <app-paginator
+    *ngIf="getTotalPages()"
+    [currentPage]="page"
+    [totalPages]="getTotalPages()"
+    (change)="onChangePage($event)">
+    </app-paginator>
+  </div>
 </div>
 
 
