--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,9 +1,26 @@
 @import '../styles.sass'
 
+.nav-marvel
+    background-color: $black
+    box-shadow: 0px 2px 10px $black;
+
+.logo-marvel
+    width: 80%
+    height: 100%
 
 
+.full-width
+    width: 100%
 
 
+.input-search
+    background: $graySearch
+    font-weight: 100
+    font-size: 2em
+    letter-spacing: 0px
+
+.center-nav
+    padding: 8px
 
 
 
