--- a/src/app/character-details/character-details.component.sass
+++ b/src/app/character-details/character-details.component.sass
@@ -19,3 +19,45 @@ $description-lines: 6
     -webkit-box-orient: vertical
     overflow: hidden
     text-overflow: ellipsis
+    margin-top: 5px
+
+.character-name 
+    position: absolute
+    top: -10px
+    color: $blackName
+    font-weight: 600
+    letter-spacing: 0
+    text-transform: uppercase
+    font-size: 1.05em
+
+.padding-10
+    padding: 10px
+
+.btn-view-more
+    background-color: $redBtns
+    color: $whiteBg
+    border-radius: 0
+    border: none
+    text-transform: uppercase
+    font-size: 0.8em
+    font-weight: 500
+    letter-spacing: 0px
+    padding-top: 10px
+    padding-bottom: 10px
+
+.related-title
+    color: $grayText
+    font-size: 1em
+
+.no-available
+    color: $redMarvel
+    text-align: center
+    padding: 20px
+    font-size: 2em
+    color: $noAvailable
+
+.comic-name
+    font-size: 0.8em
+    font-weight: lighter
+    color: $grayText
+    margin-bottom: 5px
