--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,14 +1,3 @@
-<!--HEADER-->
-<nav class="navbar navbar-full navbar-light bg-faded nav-marvel">
-  <a class="navbar-brand col-xs-2" href="../">
-    <img src="/assets/logo.png"  alt="logo-marvel" class="logo-marvel">
-  </a>
-  <form class="form-inline col-xs-6 center-nav padding">
-    <div class="input-group full-width">
-      <input type="text" class="form-control" placeholder="Search character..." aria-describedby="basic-addon1">
-    </div>
-  </form>
-</nav>
 
 <!-- ROW SORTS -->
 <div class="row flex-items-xs-top padding-row">
@@ -25,9 +14,9 @@
     </div>
 
   </div>
-  <!--SORT DROP DOWN-->
+  <!-- TODO: SORT DROP DOWN-->
   <div class="col-xs-6">
-    <div class="dropdown">
+    <!--div class="dropdown">
       <button 
       class="btn btn-secondary dropdown-toggle" 
       type="button" 
@@ -42,13 +31,13 @@
         <a class="dropdown-item" href="#">Sort by modified</a>
         <a class="dropdown-item" href="#">Sort by rate</a>
       </div>
-    </div>
+    </div-->
   </div>
 </div>
 
 <!-- ROW CHARACTERS -->
 <div class="row flex-items-xs-middle padding-row">
-  <div *ngIf="characters" class="col-xs-10" >
+  <div *ngIf="characters" class="col-xs-9" >
     <!-- CHARACTERS-DETAIL COLUMN -->
     <app-character-details
     *ngFor="let character of characters.data.results"
@@ -57,12 +46,12 @@
     </app-character-details>
   </div>
   <!-- FAVORITES COLUMN -->
-  <div class="col-xs-2">
+  <div class="col-xs-3">
     <!-- TODO: ADD FAVORITES COMPONENT -->
     <h1>FAVORITES</h1>
   </div>
 
-  <div class="col-xs-10 padding-row">
+  <div class="col-xs-9 padding-row">
     <app-paginator
     *ngIf="getTotalPages()"
     [currentPage]="page"
