--- a/src/styles.sass
+++ b/src/styles.sass
@@ -7,6 +7,11 @@ $grayBg: #f4f4f4
 $whiteBg: #ffffff
 $shadowGray: #888888
 $grayText: #8c8483
+$blackName: #473d3c
+$redBtns: #ec1d23
+$noAvailable: #d66a6f
+$lightGray: #c5c1c2
+$graySearch: #fafafa;
 
 .gray-bg
     background-color: $grayBg
@@ -33,5 +38,7 @@ $grayText: #8c8483
 .text-center
     text-align: center
 
+.no-padding
+    padding: 0
 
 
