add footer and font-awesome

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--BODY ( CHARACTERS, FAVORITES ) -->
-<!--HEADER-->
+<div class="app">
+  <!--HEADER-->
 <nav class="navbar navbar-full navbar-light bg-faded nav-marvel">
   <a class="navbar-brand col-xs-2" [routerLink]="['characters']">
     <img src="/assets/logo.png"  alt="logo-marvel" class="logo-marvel">
@@ -14,10 +15,38 @@
     </div>
   </form>
 </nav>
-<div class="container-fluid gray-bg ">
-  <router-outlet>
-    <!-- app-characters [characters]="characters"></app-characters -->
-  </router-outlet>
+
+  <div class="entry">
+    <div class="col-xs-9">
+      <div class="container-fluid gray-bg container-entry">
+        <router-outlet>
+          <!-- app-characters [characters]="characters"></app-characters -->
+        </router-outlet>
+      </div>
+    </div>
+
+    <!-- FAVORITES COLUMN -->
+    <div class="col-xs-3 ">
+      <!-- TODO: ADD FAVORITES COMPONENT -->
+      <h1>FAVORITES</h1>
+    </div>
+  </div>
+
+  <footer>
+    <div class="copy col-xs-6">
+      Made by Omar Garcia  © 2016 
+    </div>
+    <div class="logo-div col-xs-6">
+      <a href="http://www.grability.com/" target="_blank">
+        <img src="/assets/grability-logo.png"  alt="logo-grability">
+      </a>
+      <a href="https://github.com/nomardavid/OmarMarvel" target="_blank">
+        <i class="fa fa-github github-omar" aria-hidden="true"></i>
+      </a>
+    </div>
+  </footer>
 </div>
 
-<!--BOTTOM-->
+
+
+
