--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -22,6 +22,48 @@
 .center-nav
     padding: 8px
 
+.container-entry
+    margin-top: 15px
+
+.app
+    min-height: 100%
+    margin-bottom: -100px
+    width: 100%
+    display: table
+
+router-outlet,
+footer,
+nav,
+.entry 
+    display: table-row
+
+footer
+    height: 100px
+    padding: 10px
+    background: $black
+    color: $whiteBg
+    font-weight: 100
+    display: flex
+    align-items: flex-start
+    align-content: center
+    .copy
+        padding: 30px
+
+.logo-div
+    float: right
+    text-align: right
+    padding-right: 150px
+    img
+        position: relative
+        bottom: 15px
+    .github-omar
+        color: $whiteBg
+        margin: 10px
+        font-size: 4em
+        &:hover
+            color: $grability 
+
+    
 
 
     
