--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,9 @@
 /* global styles */
 
+html, body 
+    height: 100%
+    margin: 0
+
 // COLORS
 $black: #2d2727
 $redMarvel: #f0141e
@@ -12,6 +16,7 @@ $redBtns: #ec1d23
 $noAvailable: #d66a6f
 $lightGray: #c5c1c2
 $graySearch: #fafafa;
+$grability: #00de7e; 
 
 .gray-bg
     background-color: $grayBg
