add comic view component without buttons

--- a/src/app/character-details/character-details.component.html
+++ b/src/app/character-details/character-details.component.html
@@ -4,7 +4,8 @@
       <app-character-thumbnail
       *ngIf="character.thumbnail"
       [image]="character.thumbnail"
-      alt="Thumbail of {{character.name}}"></app-character-thumbnail>
+      alt="Thumbail of {{character.name}}">
+      </app-character-thumbnail>
     </div>
     <div class="col-xs-8 padding-10">
 
