--- a/src/styles.sass
+++ b/src/styles.sass
@@ -15,8 +15,10 @@ $blackName: #473d3c
 $redBtns: #ec1d23
 $noAvailable: #d66a6f
 $lightGray: #c5c1c2
-$graySearch: #fafafa;
-$grability: #00de7e; 
+$graySearch: #fafafa
+$grability: #00de7e
+$addBg: #322827
+$buyBg: #dcdcdc
 
 .gray-bg
     background-color: $grayBg
@@ -45,5 +47,27 @@ $grability: #00de7e;
 
 .no-padding
     padding: 0
+
+.padding-container
+    padding-top: 20px
+    padding-bottom: 20px
+    padding-left: 0 
+    padding-right: 0
+
+.height-row 
+    height: 20rem
+
+.padding-10
+    padding: 10px
+
+.padding-25
+    padding: 25px
+
+.add-bg
+    background-color: $addBg
+
+.buy-bg
+    background-color: $buyBg
+
 
 
