--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,7 +17,8 @@ $noAvailable: #d66a6f
 $lightGray: #c5c1c2
 $graySearch: #fafafa
 $grability: #00de7e
-$addBg: #322827
+$addBgHover: #322827
+$addBg: #f0f0f0
 $buyBg: #dcdcdc
 
 .gray-bg
@@ -68,6 +69,16 @@ $buyBg: #dcdcdc
 
 .buy-bg
     background-color: $buyBg
+
+.padding-b-0
+    padding-bottom: 0
+
+.padding-30
+    padding: 30px
+
+.entry-app
+    text-align: center
+    
 
 
 
